added container class and linear-gradient

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 <!-- Things to do section -->
     <div>
-        <h3>Top three activities to do at Torshov</h3>
+        <h3>Top three activities to do in Toronto</h3>
         <img src="images/park.jpg">
         <img src="images/theatre.jpg">
         <img src="images/sports.jpg">
