added activities container for display flex. added images and dummy text for activities

--- a/index.html
+++ b/index.html
@@ -15,14 +15,28 @@
     <!-- Hero section -->
     <div class="hero-img">
         <h1>Visit Toronto</h1>
-        <h2>Enjoy food and culture in this vabrant Canadian city.</h2>
+        <h2>Enjoy food and culture in this vibrant Canadian city.</h2>
     </div>
 <!-- Things to do section -->
     <div>
         <h3>Top three activities to do in Toronto</h3>
-        <img src="images/park.jpg">
-        <img src="images/theatre.jpg">
-        <img src="images/sports.jpg">
+        <div class="activity-container">
+        <div class="activities">
+        <h4>Beautiful Parks</h4>
+        <img src="images/parks.jpg" class="activity-image">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis temporibus debitis hic, commodi soluta sint? Explicabo harum quae asperiores pariatur.</p>
+        </div>
+        <div class="activities">
+        <h4>Fantastic Food</h4>
+        <img src="images/restaurant.jpg" class="activity-image">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus sint tempore dolorum voluptates voluptas est exercitationem vel non quasi voluptatibus!</p>
+        </div>
+        <div class="activities">
+        <h4>Top Sports Teams</h4>
+        <img src="images/baseball.jpg" class="activity-image">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis placeat, fuga ipsam possimus natus dolores minus a architecto eos fugiat!</p>
+        </div>
+        </div>
     </div>
 <!-- Meet your guide section -->
     <div>
