Added the guide section circled the avatars and made some colour changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Home Town</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,28 +22,33 @@
         <h3>Top three activities to do in Toronto</h3>
         <div class="activity-container">
         <div class="activities">
-        <h4>Beautiful Parks</h4>
-        <img src="images/parks.jpg" class="activity-image">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis temporibus debitis hic, commodi soluta sint? Explicabo harum quae asperiores pariatur.</p>
+            <h4>Beautiful Parks</h4>
+            <img src="images/parks.jpg" class="activity-image">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis temporibus debitis hic, commodi soluta sint? Explicabo harum quae asperiores pariatur.</p>
         </div>
         <div class="activities">
-        <h4>Fantastic Food</h4>
-        <img src="images/restaurant.jpg" class="activity-image">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus sint tempore dolorum voluptates voluptas est exercitationem vel non quasi voluptatibus!</p>
+            <h4>Fantastic Food</h4>
+            <img src="images/restaurant.jpg" class="activity-image">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus sint tempore dolorum voluptates voluptas est exercitationem vel non quasi voluptatibus!</p>
         </div>
         <div class="activities">
-        <h4>Top Sports Teams</h4>
-        <img src="images/baseball.jpg" class="activity-image">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis placeat, fuga ipsam possimus natus dolores minus a architecto eos fugiat!</p>
+            <h4>Top Sports Teams</h4>
+            <img src="images/baseball.jpg" class="activity-image">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis placeat, fuga ipsam possimus natus dolores minus a architecto eos fugiat!</p>
         </div>
         </div>
     </div>
 <!-- Meet your guide section -->
-    <div>
+<div class="guide-container">    
+<div class="gc-col gc-col-pd">
         <h3>Your guide</h3>
-        <p>"I have lived at Torshov for over 30 years, so I can show you all of its best parts and hidden secrets."</p>
-        <h4>Per Harald Borgen</h4>
-        <img src="images/per.jpg">
+        <p>"I have lived in Toronto all my life, so I have a pretty good knowledge of all the cool and interesting parts of this city."</p>
+        <h4>David Hamilton</h4>
+        </div>
+        <div class="gc-col">
+        <img src="images/me.jpg" class="img-guide" alt="A picture of your guide holding a pie">
+        </div>
+    </div>
     </div>
     </div>
 </body>
